# Cosc363OpenGlAssignment1

School/C05c/363/Assignment1/: CMakeLists.txt  RailModels.cpp  RailModels.h  RailModels.h.gch  RailwayWorld.cpp  Yard.cpp  assignmentfuncs.cpp  assignmentfuncs.h  gtoken.txt  loadTGA.cpp  loadTGA.h  skybox.cpp  skybox.h  test.cpp  textures.cpp  textures.h
School/C05c/363/Assignment1/.cache/clangd/index/: RailModels.cpp.F576DE9A4F82C98E.idx  RailModels.h.03027E1DDBA374F9.idx  RailwayWorld.cpp.89FD6CF31A687840.idx  assignmentfuncs.cpp.9B9D46B0FC31EAC2.idx  assignmentfuncs.h.F172051C9C13A794.idx  loadTGA.cpp.A797857DB1FD1742.idx  loadTGA.h.A87253A9C3573E72.idx  skybox.cpp.EC905F73ABB1126A.idx  skybox.h.90139F6D097A6126.idx  textures.cpp.D9FFE1C3A9EC69E9.idx  textures.h.E8ED0E8FC33B2FD6.idx
School/C05c/363/Assignment1/resourses/: Dirt 00 seamless.tga  Makefile  bark.tga  boxcar.tga  boxcarends.tga  boxcarred.tga  brickRough1.tga  log.tga  mediumline.py  negy.tga  negz.tga  posy.tga  rexboxcar.tga  square.txt  tanker.tga  tankerend.tga
School/MATH/Math353/: assignment1.py  lab1.py  lab1submisson.py  lab3.py
